--- a/template/header.ejs
+++ b/template/header.ejs
@@ -41,14 +41,14 @@
                     <li class="sub-menu__item"><a href="/tours">Все туры</a></li>
                 </ul>
             </li>
-            <li class="sub-menu" >
-                <button class="sub-menu__btn" onclick="dropDown('#dropdown-2')" >Услуги</button>
-                <ul class="sub-menu__container" id="dropdown-2">
-                    <li class="sub-menu__item"><a href="#">Визы</a></li>
-                    <li class="sub-menu__item"><a href="#">Страховки</a></li>
-                    <li class="sub-menu__item"><a href="#">Все услуги</a></li>
-                </ul>
-            </li>
+            <!--<li class="sub-menu" >-->
+                <!--<button class="sub-menu__btn" onclick="dropDown('#dropdown-2')" >Услуги</button>-->
+                <!--<ul class="sub-menu__container" id="dropdown-2">-->
+                    <!--<li class="sub-menu__item"><a href="#">Визы</a></li>-->
+                    <!--<li class="sub-menu__item"><a href="#">Страховки</a></li>-->
+                    <!--<li class="sub-menu__item"><a href="#">Все услуги</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
             <li><a href="#">Контакты</a></li>
             <li><button class="sub-menu__btn" id="modalSearch-b">Мой билет</button></li>
             <li class="callback">
