--- a/template/header.ejs
+++ b/template/header.ejs
@@ -24,7 +24,9 @@
 <body>
 <header class="container-fluid">
     <nav class="container navbar">
-        <a class="logo" href="/index"><img src="../img/logo/logo.png" width="225" height="65"></a>
+        <a class="logo" href="/index">
+            <img src="../img/logo/logo.png" width="225" height="65">
+        </a>
         <input type="checkbox" id="burgerMenu">
         <label for="burgerMenu" class="burger-label">
             <span class="burger-label__item"></span>
