--- a/public/style/general.css
+++ b/public/style/general.css
@@ -114,6 +114,7 @@ header {
 	position: absolute;
 	left: 0;
 	right: 0;
+	top: 65px;
 }
 .callback__btn {
 	display: block;
@@ -246,8 +247,10 @@ textarea.modal__form-item:focus {
 }
 .info-box {
 	flex-basis: 50%;
+
 	display: flex;
 	flex-direction: row;
+    align-items: center;
 	text-align: center;
 }
 .info-box__life {
@@ -285,12 +288,17 @@ textarea.modal__form-item:focus {
 	border-radius: 5px;
 
 	color: white;
+    line-height: 40px;
+    vertical-align: middle;
 }
 .common__tripadvisor-img {
 	text-align: center;
 }
 .common__tripadvisor-img img {
 	width: auto;
+}
+.common__tripadvisor-caption {
+    text-align: center;
 }
 /********* DIVING ***********/
 .diving {
@@ -529,7 +537,7 @@ textarea.modal__form-item:focus {
 
 	z-index: 1;
 }
-.tour-short .tour:hover .tour__price {
+.tour-short .tour:hover .tour__title {
 	z-index: 0;
 	transform: scale(0);
 	transition: 0.5s;
@@ -562,9 +570,10 @@ textarea.modal__form-item:focus {
 .tour-short .tour__img {
 	transform: none;
 }
-.tour-short .tour__price {
+.tour-short .tour__title {
 	position: absolute;
 	bottom: 5%;
+	left: 0;
 	padding: 0 10px;
 	background-color: rgba(0,0,0, 0.65);
 	font-size: 36px;
@@ -600,6 +609,7 @@ textarea.modal__form-item:focus {
 .tour-short:hover .tour-features:before {
 	z-index: 0;
 }
+
 .tour-short .tour__description p {
 	display: none;
 }
