--- a/template/single.ejs
+++ b/template/single.ejs
@@ -37,22 +37,26 @@
                     <label for="dateIn" class="cost__label">
                         Введите дату заезда
                         <input type="text" class="cost__input" id="dateIn" name="dateIn"
-                               title="Введите дату заезда" required>
+                               title="Введите дату заезда" min="10" max="10" required>
+                        <span></span>
                     </label>
                     <label for="dateOut" class="cost__label">
                         Введите дату возвращения
                         <input type="text" class="cost__input" id="dateOut" name="dateOut"
-                               title="Введите дату возвращения" required>
+                               title="Введите дату возвращения" min="10" max="10" required>
+                        <span></span>
                     </label>
                     <label for="adult" class="cost__label">
                         Количество взрослых
                         <input type="number" class="cost__input" id="adult" name="adult" min="1" max="10"
                                value="2" required>
+                        <span></span>
                     </label>
                     <label for="children" class="cost__label">
                         Количество детей
                         <input type="number" class="cost__input" id="children" name="children" min="0" max="10"
                                value="0" required>
+                        <span></span>
                     </label>
                     <label for="room" class="cost__label">
                         <select name="room" class="cost__select" id="room">
@@ -65,39 +69,61 @@
                     <!--<input type="checkbox" name="eat" id="eat"-->
                     <!--title="Включить в стоимость завтраки?">-->
                     <!--</label>-->
-                    <button type="button" class="btn-just cost__btn" title="Пока вы не нажмете, возле готеля будет указана
-            цена одной ночи для одного человека!" onclick="hotelCost()">
+                    <button type="button" class="btn-just cost__btn"  onclick="hotelCost(event)">
                         Узнать цену
                     </button>
                 </form>
             </section>
             <section class="hotels">
                 <div class="container">
+                    <div class="container__nav">
+                        <button type="button" onclick="slideSection('hotels', 'cost')" class="btn-just tac
+                         ticket__btn-item">
+                            <span class="btn__text"> Назад </span>
+                            <img src="../img/icons/left-arrow.png" alt="back" title="Go back to cost">
+                        </button>
+                    </div>
                     <% hotels.forEach((hotel, index) => { %>
                     <div class="hotel" id="<%= hotel.hotelName %>" data-price="<%= hotel.hotelPrice %>" data-order="">
-                        <h3 class="hotel__title">
-                            <%= hotel.hotelName %>
-                        </h3>
-                        <div class="hotel__stars" data-stars="<%= hotel.hotelStar %>">
+                        <div class="hotel__photo">
+                            <h3 class="hotel__title">
+                                <%= hotel.hotelName %>
+                            </h3>
+                            <div class="hotel__stars" data-stars="<%= hotel.hotelStar %>">
+                                <span class="star__item">
 
+                                </span>
+                            </div>
+                            <div class="hotel__img">
+                                <img src="../img/hotels/<%= hotel.hotelImg %>" alt="<%= hotel.hotelName %>">
+                            </div>
                         </div>
-                        <div class="hotel__img">
-                            <img src="../img/hotels/<%= hotel.hotelImg %>" alt="<%= hotel.hotelName %>">
+                        <div class="hotel__content">
+                            <div class="hotel__content-wrapper">
+                                <div class="hotel__description">
+                                    <%= hotel.hotelDescription %>
+                                </div>
+                                <div class="hotel__price">
+                                    Стоимость:<b> <%= hotel.hotelPrice %>$</b>
+                                </div>
+                            </div>
+
+                            <button class="callback__btn" onclick="booking('<%= hotel.hotelName %>')">
+                                Бронировать
+                            </button>
                         </div>
-                        <div class="hotel__description">
-                            <%= hotel.hotelDescription %>
-                        </div>
-                        <div class="hotel__price">
-                            Стоимость:<b> <%= hotel.hotelPrice %>$</b>
-                        </div>
-                        <button class="callback__btn" onclick="booking('<%= hotel.hotelName %>')">
-                            Бронировать
-                        </button>
                     </div>
                     <% }); %>
                 </div>
             </section>
             <section class="booking">
+                <div class="container__nav">
+                    <button type="button" onclick="slideSection('booking', 'hotels')" class="btn-just
+                    ticket__btn-item">
+                        <span class="btn__text"> Назад </span>
+                        <img src="../img/icons/left-arrow.png" alt="back" title="Go back to cost">
+                    </button>
+                </div>
                 <div class="modal__title">
                     <b>
                         Заполните пожалуйста все поля
@@ -107,24 +133,29 @@
                     <label for="name" class="cost__label">
                         Ваше имя
                         <input type="text" class="cost__input" name="name" id="name" required>
+                        <span></span>
                     </label>
                     <label for="number" class="cost__label">
                         Ваш номер телефона
                         <input type="tel" class="cost__input" id="number" name="number"
                                placeholder="+38000000000"
                                minlength="10" maxlength="13" required>
+                        <span></span>
                     </label>
                     <label for="email" class="cost__label">
                         Ваша почта
                         <input type="email" class="cost__input" id="email" name="email"
                                required>
+                        <span></span>
                     </label>
                     <label for="message" class="cost__label">
                         Коментарии к заказу
-                        <textarea name="message" id="message" class="cost__textarea" cols="30" rows="10"
+                        <textarea name="message" id="message" class="cost__textarea" cols="30" rows="7"
                                   placeholder="Здесь можете написать свой коментарий"></textarea>
                     </label>
-                    <input type="text" id="orderPrice" class="cost__output" name="orderPrice" readonly>
+                    <label for="orderPrice" class="cost__label">
+                        <input type="text" id="orderPrice" class="cost__output" name="orderPrice" readonly>
+                    </label>
                     <input type="hidden" id="orderAdult" name="orderAdult" readonly>
                     <input type="hidden" id="orderChildren" name="orderChildren" readonly>
                     <input type="hidden" id="orderDateIn" name="orderDateIn" readonly>
@@ -190,13 +221,6 @@
 </main>
 <script src="../js/jquery-1.12.4.js"></script>
 <script src="../js/jquery-ui.js"></script>
-<script>
-    $( function() {
-        $( "#dateIn" ).datepicker();
-    } );
-    $( function() {
-        $( "#dateOut" ).datepicker();
-    } );
-</script>
+<script src="../js/datepicker.js"></script>
 <script src="../js/booking.js"></script>
 <% include footer %>
